# Ecommerce

./: .gitignore  README.md
backend/: README.md  env  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 29b9500956a4_add_product_comments.py  d9a0c0e6b59a_add_order_model.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routers/: __init__.py  auth.py  bookings.py  categories.py  comments.py  orders.py  posts.py  products.py  uploads.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  booking.py  category.py  comment.py  order.py  post.py  product.py  user.py
backend/app/schemas/: auth.py  booking.py  category.py  comment.py  order.py  post.py  product.py  user.py
backend/app/services/: supabase_storage.py
backend/scripts/: create_admin.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/categories/: page.tsx
frontend/src/app/admin/posts/: page.tsx
frontend/src/app/admin/products/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/blog/[id]/: comments-client.tsx  page.tsx
frontend/src/app/bookings/: page.tsx
frontend/src/app/products/: page.tsx
frontend/src/app/products/[id]/: order-form.tsx  page.tsx
frontend/src/components/: Navigation.tsx
frontend/src/lib/: api.ts  auth-context.tsx
